--- a/app/views/new/training-location.html
+++ b/app/views/new/training-location.html
@@ -30,10 +30,10 @@
         }, {
           divider: "or"
         }, {
-          value: "host",
+          value: "At the school where the candidate is based",
           text: "At the school where the candidate is based"
         }, {
-          value: "remote",
+          value: "Remotely",
           text: "Remotely"
         }]
       }) }}
