--- a/app/views/rolled-over.html
+++ b/app/views/rolled-over.html
@@ -9,7 +9,7 @@
         Prepare for the next cycle
       </h1>
 
-      <p>All your courses, locations and details have been copied over.</p>
+      <p>Your courses, locations and details have been copied.</p>
 
       <p>Courses for the next cycle will be published on 1 September 2021.</p>
 
@@ -17,13 +17,13 @@
 
       <ul class="govuk-list govuk-list--bullet">
         <li>add new courses</li>
-        <li>delete courses you’re no longer running</li>
-        <li>edit details for your courses</li>
+        <li>delete courses</li>
+        <li>edit the details of your courses</li>
       </ul>
 
       <h2 class="govuk-heading-m">New for 2021 to 2022</h2>
 
-      <p>Applications for all courses will be via Apply for teaching training, not UCAS.</p>
+      <p>All applications will be made via Apply for teaching training, not UCAS.</p>
 
       <p>For each course, you will need to confirm:</p>
 
