Fix upload locations links and routes

--- a/app/views/locations/index.html
+++ b/app/views/locations/index.html
@@ -56,7 +56,7 @@
           href: "/location/start"
         }) }}
 
-        <a class="govuk-link" href="/locations/upload">Upload location data</a>
+        <a class="govuk-link" href="/location/upload">Upload location data</a>
       </div>
 
       <hr class="govuk-section-break govuk-section-break--l govuk-section-break--visible">
