Locations content tweaks

--- a/app/views/new/placement-locations.html
+++ b/app/views/new/placement-locations.html
@@ -1,5 +1,5 @@
 {% extends "layout.html" %}
-{% set title = "Which schools can candidates apply to?" %}
+{% set title = "Choose the locations a candidate can apply to" %}
 {% set backLink = paths.back %}
 
 {% block content %}
