--- a/app/views/new/placement-policy.html
+++ b/app/views/new/placement-policy.html
@@ -1,5 +1,5 @@
 {% extends "layout.html" %}
-{% set title = "How do school placements work?" %}
+{% set title = "School placements" %}
 {% set backLink = paths.back %}
 
 {% block content %}
@@ -17,7 +17,7 @@
         },
         items: [{
           value: "hosted",
-          text: "Candidates choose a lead or host school when they apply",
+          text: "Candidates can choose a lead or host school",
           conditional: {
             html: govukCharacterCount({
               id: code + "-placement-policy-hosted",
@@ -33,7 +33,7 @@
           }
         }, {
           value: "placed",
-          text: "Placements are arranged before training starts",
+          text: "Placements are arranged with candidates before their training starts",
           conditional: {
             html: govukCharacterCount({
               id: code + "-placement-policy-placed",
